--- a/project_2/index.html
+++ b/project_2/index.html
@@ -21,7 +21,12 @@
         </div>
         <button type="submit">Calculate</button>
     </form>
-    <div class="result"></div>
+   
     </div>
+    <div class="result-container">
+        <div class="result"></div>
+    </div>
+
 </body>
+<script src="script.js"></script>
 </html>
